# CycleInvoice

./: .coveragerc  .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  SECURITY.md  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  docker-compose.yml  gunicorn_config.py  manage.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-action-ruff.yml  github-action-sonarqube.yml  github-action-tests.yml  github-action-todo-to-issue.yml  github-docker-ci.yml
accounting/: admin.py  apps.py  models.py  signals.py  tests.py  validators.py  views.py
accounting/migrations/: 0001_initial.py  0002_create_settings.py  0002_historicaltransaction_transaction_historicalpayment.py  0002_initial.py  0003_historicalpayment_invoice_and_more.py  0003_setting.py
api/: apps.py  mixins.py  pagination.py  serializers.py  urls.py
api/tests/: base.py  test_mixins.py  test_pagination.py  test_serializers.py
common/: admin.py  apps.py  factories.py  models.py  selectors.py  services.py  tests.py  views.py
common/migrations/: 0001_initial.py
common/tests/: base.py  test_models.py  test_selectors.py  test_services.py
config/: asgi.py  urls.py  wsgi.py
config/django/: __init__.py  base.py
config/settings/: __init__.py  celery.py  constance.py  email.py  jwt.py  logging.py  storage.py
config/tests/: test_settings.py
contact/: admin.py  apps.py  models.py  tests.py  views.py
contact/migrations/: 0001_initial.py  0002_address_additional_alter_address_zip_code_and_more.py  0002_customer_remove_contact_id_remove_organisation_id_and_more.py  (+3 more)
cycleInvoice/: asgi.py  settings.py  urls.py  wsgi.py
cycle_invoice/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: db-init.sql
docs/: class_diagram.md  class_diagram_new.md  class_diagram_old.md
domain/: admin.py  models.py
example_data/: invoice_data.json
requirements/: base.txt  local.txt  production.txt
sale/: admin.py  api.py  apps.py  filters.py  models.py  selectors.py  tasks.py  tests.py  urls.py  views.py
sale_work/: admin.py  apps.py  models.py  tests.py  views.py
templates/: invoice.html  qr_code.html
vehicle/: admin.py  apps.py  models.py  views.py
web/: admin.py  apps.py  models.py  tests.py
(+302 files in other folders)
